--- a/conf/defaults.in
+++ b/conf/defaults.in
@@ -1,7 +1,7 @@
 # -*- mode: shell-script; -*-
 #
 #   Coova-Chilli Default Configurations. 
-#   To customize, copy this file to @ETCCHILLI@/config
+#   To customize, copy this file to /etc/chilli/config
 #   and edit to your liking. This is included in shell scripts
 #   that configure chilli and related programs before file 'config'. 
 
@@ -10,13 +10,19 @@
 #   Local Network Configurations
 # 
 
-# HS_WANIF=eth0            # WAN Interface toward the Internet
-HS_LANIF=eth1		   # Subscriber Interface for client devices
+#HS_WANIF=eno1            # WAN Interface toward the Internet
+HS_LANIF=enp1s0            # WAN Interface toward the Internet
+#HS_LANIF=wlo1		   # Subscriber Interface for client devices
+HS_WANIF=enxf8e43b921a0c   # Subscriber Interface for client devices
 HS_NETWORK=10.1.0.0	   # HotSpot Network (must include HS_UAMLISTEN)
 HS_NETMASK=255.255.255.0   # HotSpot Network Netmask
-HS_UAMLISTEN=10.1.0.1	   # HotSpot IP Address (on subscriber network)
+HS_UAMLISTEN=10.1.0.1 # HotSpot IP Address (on subscriber network)
 HS_UAMPORT=3990            # HotSpot UAM Port (on subscriber network)
 HS_UAMUIPORT=4990          # HotSpot UAM "UI" Port (on subscriber network, for embedded portal)
+HS_UAMALIASNAME="chilli"
+HS_DNS_DOMAIN="paywifigo.me"
+
+HS_CHALLENGETIMEOUT=30
 
 # HS_DYNIP=
 # HS_DYNIP_MASK=255.255.255.0
@@ -25,18 +31,39 @@ HS_UAMUIPORT=4990          # HotSpot UAM "UI" Port (on subscriber network, for e
 # HS_DNS_DOMAIN=
 
 # OpenDNS Servers
-HS_DNS1=208.67.222.222
+#HS_DNS1=208.67.222.222
+#HS_DNS2=208.67.220.220
+
+HS_DNS1=10.1.0.1
 HS_DNS2=208.67.220.220
+
+## Secure the portal to make use of SSL
+HS_COAPORT=3799
+HS_SSLKEYFILE=/etc/chilli/certificate/wildcard/private.key
+HS_SSLCERTFILE=/etc/chilli/certificate/wildcard/certificate.crt
+#
+#HS_SSLCAFILE=/home/cystar-wiproject/emmanuel/example.ca
+#Enables for the captive portal to make use of ssl traffic encryption
+HS_UAMUISSL=on
+# Facilitates the redirection of Https-secure sites to the captive portal - Warns of connection is not private
+# Todo: Implement a transparent proxy to remedy this
+
+HS_REDIRSSL=on
+
+HS_REDIR=on
+
 
 ###
 #   HotSpot settings for simple Captive Portal
-#
-HS_NASID=nas01
-HS_RADIUS=localhost
-HS_RADIUS2=localhost
-# HS_UAMALLOW=www.coova.org
-HS_RADSECRET=testing123    # Set to be your RADIUS shared secret
-HS_UAMSECRET=change-me     # Set to be your UAM secret
+
+HS_NASID=roamnas01
+HS_RADIUS=3.82.163.145
+#HS_RADIUS=10.1.0.1
+#HS_RADIUS2=localhost
+
+HS_UAMALLOWED=10.1.0.1,https://10.1.0.1:4990/json/status,https://unpkg.com/leaflet@1.7.1/dist/leaflet.css,https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css,http://10.1.0.1/assets/index.php,https://www.paywifigo.me, https://www.paywifigo.me/coova_uam_service_portal/,https://app.paywifigo.me:4990/json/status,https://paywifigo.me:8443/,https://app.paywifigo.me/wifigo_movieshop/upload.php
+HS_RADSECRET=radpass # Set to be your RADIUS shared secret
+HS_UAMSECRET=radpass     # Set to be your UAM secret
 HS_UAMALIASNAME=chilli
 
 #  Configure RADIUS proxy support (for 802.1x + captive portal support)
@@ -58,7 +85,8 @@ HS_UAMALIASNAME=chilli
 # HS_UAMAAAURL=http://my-site/script.php
 
 #   Put entire domains in the walled-garden with DNS inspection
-# HS_UAMDOMAINS=".paypal.com,.paypalobjects.com"
+#   openstreetmap is required for external captive portal
+HS_UAMDOMAINS=.paypal.com,paypalobjects.com,.unpkg.com,.leafletjs.com,.w3.org,.openstreetmap.org,.paywifigo.me,paywifigo.me,.jsdelivr.net,.media-amazon.com,.jquery.com,.safaricom.co.ke,.urlgeni.us,urlgeni.us,imdb8.p.rapidapi.com,.imdb8.p.rapidapi.com,g.whatsapp.net,.pesapal.com,.online-metrix.net,.cardinalcommerce.com,.online-metrix.net,.ccdc02.com,.google-analytics.com,.amazonaws.com,.cloudflare.com,.googletagmanager.com,.appspot.com,.unpkg.com,.googleapis.com,.fontawesome.com,.bootstrapcdn.com
 
 #   Optional initial redirect and RADIUS settings
 # HS_SSID=<ssid>	   # To send to the captive portal
@@ -68,21 +96,32 @@ HS_UAMALIASNAME=chilli
 #   The server to be used in combination with HS_UAMFORMAT to 
 #   create the final chilli 'uamserver' url configuration.
 HS_UAMSERVER=$HS_UAMLISTEN
+HS_DHCPOPT=114,"https://app.paywifigo.me/captive-portal/api.php"
+#HS_DHCPOPT=6,8.8.8.8,8.8.4.4
+#HS_ANYIP=on
+#HS_LAYER3=on 
+
 
 #   Use HS_UAMFORMAT to define the actual captive portal url.
 #   Shell variable replacement takes place when evaluated, so here
 #   HS_UAMSERVER is escaped and later replaced by the pre-defined 
 #   HS_UAMSERVER to form the actual "--uamserver" option in chilli.
-HS_UAMFORMAT=http://\$HS_UAMLISTEN:\$HS_UAMUIPORT/www/login.chi
+#HS_UAMFORMAT=https://\$HS_UAMLISTEN:\$HS_UAMUIPORT/www/login.chi
+
+# Theeeeeeeeeeeeeeeeeeeeeeeeeeeeee Current Default
+HS_UAMFORMAT=https://app.paywifigo.me/WiFiGo/index.html
 
 #   Same principal goes for HS_UAMHOMEPAGE.
-HS_UAMHOMEPAGE=http://\$HS_UAMLISTEN:\$HS_UAMPORT/www/coova.html
+#HS_UAMHOMEPAGE=https://\$HS_UAMLISTEN:\$HS_UAMUIPORT/www/coova.html
+
 
 #   This option will be configured to be the WISPr LoginURL as well
 #   as provide "uamService" to the ChilliController. The UAM Service is
 #   described in: http://www.coova.org/CoovaChilli/UAMService
 #
 # HS_UAMSERVICE=
+
+HS_INJECT="<script> alert('Hello to the fin World');</script>"
 
 
 ###
@@ -92,7 +131,7 @@ HS_UAMHOMEPAGE=http://\$HS_UAMLISTEN:\$HS_UAMPORT/www/coova.html
 #
 # HS_ANYIP=on		   # Allow any IP address on subscriber LAN
 #
-# HS_MACAUTH=on		   # To turn on MAC Authentication
+HS_MACAUTH=on		   # To turn on MAC Authentication
 #
 # HS_MACAUTHDENY=on	   # Put client in 'drop' state on MAC Auth Access-Reject
 #
@@ -100,7 +139,7 @@ HS_UAMHOMEPAGE=http://\$HS_UAMLISTEN:\$HS_UAMPORT/www/coova.html
 #
 # HS_MACALLOW="..."      # List of MAC addresses to authenticate (comma seperated)
 #
-# HS_USELOCALUSERS=on      # To use the @ETCCHILLI@/localusers file
+# HS_USELOCALUSERS=on      # To use the /etc/chilli/localusers file
 #
 # HS_OPENIDAUTH=on	   # To inform the RADIUS server to allow OpenID Auth
 #
@@ -112,7 +151,7 @@ HS_UAMHOMEPAGE=http://\$HS_UAMLISTEN:\$HS_UAMPORT/www/coova.html
 # HS_OPENIDAUTH=on	   # To inform the RADIUS server to allow OpenID Auth
 #			   # Will also configure the embedded login forms for OpenID
 #
-# HS_USE_MAP=on		   # Short hand for allowing the required google
+HS_USE_MAP=on		   # Short hand for allowing the required google
 #			   # sites to use Google maps (adds many google sites!)
 #
 ###
@@ -148,18 +187,18 @@ HS_UAMHOMEPAGE=http://\$HS_UAMLISTEN:\$HS_UAMPORT/www/coova.html
 # The up.sh script will allow these local ports to be used, while the default
 # is to block all unwanted traffic to the tun/tap. 
 #
-# HS_TCP_PORTS="80 443"
-# HS_UDP_PORTS="1701"
+HS_TCP_PORTS="80 443 8080 8443 8000 3389 3306 22 25 110 143 465 587 993 995 3128 3129 3130 5901 445 5228 5222 5201 5911"
+HS_UDP_PORTS="1701 3799 137 138 3389 5201 5911"
 
 ###
 #   Standard configurations
 #
 HS_MODE=hotspot
 HS_TYPE=coovachilli
-# HS_RADAUTH=1812
-# HS_RADACCT=1813
-# HS_ADMUSR=coovachilli
-# HS_ADMPWD=coovachilli
+HS_RADAUTH=1812
+HS_RADACCT=1813
+HS_ADMUSR=admin
+HS_ADMPWD=admin
 
 
 ###
@@ -172,12 +211,12 @@ HS_TYPE=coovachilli
 #   by chilli with url /www/<file name>. Only extentions like .html
 #   .jpg, .gif, .png, .js are allowed. See below for using .chi as a
 #   CGI extension.
-HS_WWWDIR=@ETCCHILLI@/www
+HS_WWWDIR=/etc/chilli/www
 
 #   Using this option assumes 'haserl' is installed per-default
 #   but, and CGI type program can ran from wwwsh to process requests
 #   to chilli with url /www/filename.chi
-HS_WWWBIN=@ETCCHILLI@/wwwsh
+HS_WWWBIN=/etc/chilli/wwwsh
 
 #   Some configurations used in certain user interfaces
 #
@@ -189,15 +228,15 @@ HS_PROVIDER_LINK=http://coova.github.io/
 #   WISPr RADIUS Attribute support
 #
 
-HS_LOC_NAME="My HotSpot"	   # WISPr Location Name and used in portal
+HS_LOC_NAME="Uelekezo Iten"	   # WISPr Location Name and used in portal
 
 #   WISPr settings (to form a proper WISPr-Location-Id)
-# HS_LOC_NETWORK="My Network"	   # Network name
-# HS_LOC_AC=408			   # Phone area code
-# HS_LOC_CC=1			   # Phone country code
-# HS_LOC_ISOCC=US		   # ISO Country code
+HS_LOC_NETWORK="Uelekezo WiFi Networks"	   # Network name
+HS_LOC_AC=254			   # Phone area code
+HS_LOC_CC=254			   # Phone country code
+HS_LOC_ISOCC=KE		   # ISO Country code
 
 # Embedded miniportal
 # HS_REG_MODE="tos" # or self, other
-# HS_RAD_PROTO="pap" # or mschapv2, chap
-# HS_USE_MAP=on
+HS_RAD_PROTO="pap" # or mschapv2, chap
+
